Version 0.9.5-svn - unknown
- fix kannel gateway, missing bearerbox host and sendsms port, plugin/gateway/kannel/fn.php
- fix RFI LFI bug, http://www.securityfocus.com/bid/33138

Version 0.9.4 - 080713
- on themes, add loginpage.php and rename welcome.php to default.php
- remove bin/kannel_incoming.sh
- kannel can only pass MOs to playSMS using geturl method, see contrib/kannel/kannel.conf
- remove PlaySMS Web URL and Kannel Incoming Path, kannel gateway, kannel.php
- change delivery mechanism, now using file_get_contents instead of fsockopen, kannel gateway
- fix (again and again), mclass=0 for flash, mclass=1 for text to mobile, kannel gateway, fn.php
- fix delivering messages, anticipate responses from kannel latest version, kannel gateway
- fix admin auth for non multi session login
- fix user preferences unable to modify email
- change default login type to non multi session login

Version 0.9.3 - 080520
- NOTE: PHP PEAR and PEAR-DB are removed from playSMS package, please install them manually
- lib/fn_sendsms.php, websend2pv(), websend2group() returns array status, destination, smslog_id
- fix mobile2uid() in lib/fn_user.php returns wrong value, should be $uid
- fix locating base application path, previously failed to autodetect paths correctly
- fix admin editing user, previously sender id was not shown correctly
- fix sms_poll not handling keyword correctly, sms_poll_handle(), target_choice = poll_param
- fix playsmsd process, changes to config file and php sources not updated
- fix HTTP API, input.php, ta=pv returns "OK" followed by smslog_id
- fix (again) message type (mclass), keep sending as SIM message, in kannel gateway, fn.php
- change logger behaviour
- add new plugin/feature, sms_quiz
- add new plugin/feature, sms_subscribe
- add new plugin/feature, sms_autosend
- add new hookable function, lib/fn_sendsms.php, sendsms()
- add new hookable function, lib/fn_core.php, playsmsd(), executed during daemon tick