@@ -33,7 +33,6 @@ function kannel_hook_sendsms($mobile_sender,$sms_sender,$sms_to,$sms_msg,$uid=''
     }
     
     $dlr_url = $http_path['base'] . "/plugin/gateway/kannel/dlr.php?type=%d&slid=$smslog_id&uid=$uid";
-    $dlr_url = str_replace('//', '/', $dlr_url);
 
     $URL = "http://".$kannel_param['bearerbox_host'].":".$kannel_param['sendsms_port'];
     $URL .= "/cgi-bin/sendsms?username=".urlencode($kannel_param['username'])."&password=".urlencode($kannel_param['password']);
@@ -51,27 +50,6 @@ function kannel_hook_sendsms($mobile_sender,$sms_sender,$sms_to,$sms_msg,$uid=''
 	    setsmsdeliverystatus($smslog_id, $uid, $p_status);
 	}
     }
-
-    /*
-    $connection = fsockopen($kannel_param['bearerbox_host'],$kannel_param['sendsms_port'],&$error_number,&$error_description,60);
-    if($connection) 
-    {
-	socket_set_blocking($connection, false);
-	fputs($connection, "GET $URL HTTP/1.0\r\n\r\n");
-	while (!feof($connection)) 
-	{
-	    $rv = fgets($connection, 128);
-	    if (($rv == "Sent.") || ($rv == "0: Accepted for delivery") || ($rv == "3: Queued for later delivery"))
-	    {
-		$ok = true;
-		// set pending
-		$p_status = 0;
-		setsmsdeliverystatus($smslog_id,$uid,$p_status);
-	    }
-	}
-	fclose ($connection);
-    }
-    */
 
     return $ok;
 }
